# sap-btp-abap-finance-process-extension

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-ci.yml
abap/: README.md
abap/behavior/: zbp_na_i_invoice.clas.abap  zna_i_invoice.bdef.asbdef
abap/cds-views/: zna_c_invoice.ddls.asddl  zna_i_invoice.ddls.asddl
abap/classes/: zna_cl_invoice_data.clas.abap  zna_cl_invoice_validator.clas.abap
abap/database-tables/: zna_invoice.ddls.asddl
abap/services/: zna_sd_invoice.srvd.srvdsrv  zna_ui_invoice_o4.README.md
abap/tests/: zna_cl_invoice_validator_test.clas.abap
diagrams/: data-model.mmd  invoice-lifecycle.mmd  system-architecture.mmd
docs/: api-contract.md  architecture.md  business-requirements.md  business-rules.md  clean-core.md  data-model.md  sap-setup.md  testing.md
docs/screenshots/: README.md
python-client/: .env.example
python-client/src/sap_finance_extension/: __init__.py  cli.py  config.py  csv_loader.py  exceptions.py  lifecycle.py  local_repository.py  models.py  reporting.py  sap_odata_client.py  validators.py
python-client/tests/: test_cli.py  test_csv_loader.py  test_lifecycle.py  test_reporting.py  test_repository.py  test_validators.py
sample-data/: duplicate_invoices.csv  invalid_invoices.csv  valid_invoices.csv
scripts/: smoke_test.py
